# cancion-pirata

./: .gitignore  README.md  compose.yml  models.py
backend/: Dockerfile  pyproject.toml
backend/app/: app.py  backend_pre_start.py  initial_data.py  main.py  models.py  poem_parser.py  utils.py
backend/app/api/: api.py  deps.py
backend/app/api/routes/: author.py  authors.py  collection.py  collections.py  login.py  poems.py  private.py  search.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: author.py  base.py  collection.py  crud_author.py  crud_poems.py  poem.py  poem_poem.py  user.py
backend/app/models/: author.py  collection.py  poem.py  user.py
backend/app/schemas/: author.py  collection.py  common.py  login.py  poem.py  poem_poem.py  search.py  user.py
backend/app/templates/email/src/: account_verification.mjml  email_verification.mjml  new_account.mjml  reset_password.mjml  verify_email.mjml
backend/app/tests/: conftest.py  test_parser.py
backend/app/tests/api/routes/: test_author.py  test_authors.py  test_collections.py  test_login.py  (+4 more)
backend/app/tests/crud/: test_crud_author.py  test_crud_poems.py  test_crud_user.py
backend/app/tests/scripts/: test_parser.py  test_poem_parser.py
backend/app/tests/utils/: author.py  collection.py  poem.py  user.py
backend/app/utils/: email.py  utils.py
backend/scripts/: downloadOpenApiJson.sh  prestart.sh  start.sh
backend/test_data/: authors_data.json  collections_data.json  create_test_data.py  poems_data.json  poems_datajson  test.py  users_data.json
(+200 files in other folders)
