[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "psycopg[binary,pool]>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sentry-sdk>=2.26.1",
    "sqlalchemy>=2.0.40",
    "tqdm>=4.67.1",
]
